--- a/xv6/Makefile
+++ b/xv6/Makefile
@@ -47,17 +47,17 @@ DEPS := $(OBJS:.o=.d)
 
 $(BUILD_DIR)/%.c.o: %.c
 	mkdir -p $(/obj/libfdt)
-	$(CC) $(CFLAGS) -c -o $@ $<
+	$(CC) $(CFLAGS) -Llibc/lib/ -lc -c -o $@ $< 
 
 $(BUILD_DIR)/%.c.o: %.c
 	mkdir -p $(dir $@)
-	$(CC) $(CFLAGS) -c -o $@ $<
+	$(CC) $(CFLAGS) -Llibc/lib/ -lc -c -o $@ $<
 $(BUILD_DIR)/%.S.o: %.S
 	mkdir -p $(dir $@)
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 $(KERN_ELF): kern/linker.ld $(OBJS)
-	$(LD) -o $@ -T $< $(OBJS)
+	$(LD) -o $@ -T $< $(OBJS) -Llibc/lib/ -lc 
 	$(OBJDUMP) -S -d $@ > $(basename $@).asm
 	$(OBJDUMP) -x $@ > $(basename $@).hdr
 
