--- a/xv6/libc/arch/x32/bits/syscall.h.in
+++ b/xv6/libc/arch/x32/bits/syscall.h.in
@@ -298,7 +298,8 @@
 #define __NR_fspick		(0x40000000 + 433)
 #define __NR_pidfd_open		(0x40000000 + 434)
 #define __NR_clone3		(0x40000000 + 435)
-
+#define __NR_turn_on_gpio (0x40000000 + 436)
+#define __NR_turn_off_gpio (0x40000000 + 437)
 
 #define __NR_rt_sigaction (0x40000000 + 512)
 #define __NR_rt_sigreturn (0x40000000 + 513)
