--- a/xv6/libc/arch/m68k/bits/syscall.h.in
+++ b/xv6/libc/arch/m68k/bits/syscall.h.in
@@ -405,3 +405,5 @@
 #define __NR_fsmount		432
 #define __NR_fspick		433
 #define __NR_pidfd_open		434
+#define __NR_turn_on_gpio 435
+#define __NR_turn_off_gpio 436
