--- a/xv6/libc/arch/mips/bits/syscall.h.in
+++ b/xv6/libc/arch/mips/bits/syscall.h.in
@@ -408,4 +408,6 @@
 #define __NR_fspick		4433
 #define __NR_pidfd_open		4434
 #define __NR_clone3		4435
+#define __NR_turn_on_gpio 4436
+#define __NR_turn_off_gpio 4437
 
