--- a/xv6/libc/arch/mips64/bits/syscall.h.in
+++ b/xv6/libc/arch/mips64/bits/syscall.h.in
@@ -338,4 +338,6 @@
 #define __NR_fspick		5433
 #define __NR_pidfd_open		5434
 #define __NR_clone3		5435
+#define __NR_turn_on_gpio 5436
+#define __NR_turn_off_gpio 5437
 
