--- a/xv6/libc/arch/mipsn32/bits/syscall.h.in
+++ b/xv6/libc/arch/mipsn32/bits/syscall.h.in
@@ -362,4 +362,6 @@
 #define __NR_fspick		6433
 #define __NR_pidfd_open		6434
 #define __NR_clone3		6435
+#define __NR_turn_on_gpio 6436
+#define __NR_turn_off_gpio 6437
 
