--- a/xv6/libc/arch/powerpc64/bits/syscall.h.in
+++ b/xv6/libc/arch/powerpc64/bits/syscall.h.in
@@ -387,4 +387,6 @@
 #define __NR_fspick		433
 #define __NR_pidfd_open		434
 #define __NR_clone3		435
+#define __NR_turn_on_gpio 436
+#define __NR_turn_off_gpio 437
 
