--- a/xv6/libc/arch/riscv64/bits/syscall.h.in
+++ b/xv6/libc/arch/riscv64/bits/syscall.h.in
@@ -289,6 +289,8 @@
 #define __NR_fspick		433
 #define __NR_pidfd_open		434
 #define __NR_clone3		435
+#define __NR_turn_on_gpio 436
+#define __NR_turn_off_gpio 437
 
 #define __NR_sysriscv __NR_arch_specific_syscall
 #define __NR_riscv_flush_icache (__NR_sysriscv + 15)
