uso de leds con syscall desde consola ERROR: si pongo el device tree en config.txt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "*.in": "cpp"
+        "*.in": "cpp",
+        "syscall.h": "c",
+        "defs.h": "c",
+        "wait.h": "c",
+        "unistd.h": "c"
     }
 }
